@@ -924,16 +924,25 @@ a.beige:hover			{color:#FFF;}
 /* Streams
 -------------------------------------------------------------- */
 
-.related_item	{display:flex; justify-content:space-between; border-radius:6px; color:#ddd; width:680px; padding:1em; margin:0 auto; margin-bottom:5px; background:rgba(0,14,32,0.85);}
+.related_item	{border-radius:6px; color:#ddd; width:680px; padding:1em; margin:0 auto; margin-bottom:5px;position:relative; background:rgba(0,14,32,0.85);}
 .related_pivot	{background:rgba(75,70,6,0.85); border:1px solid #ff0;}
 .related_link 	{fill:none; stroke:#ff0;}
 .related_span	{display:flex; justify-content:flex-start; margin-top:1em;}
+.related_wrap	{margin-bottom:4em;}
+.related_info	{display:flex; justify-content:space-between;}
+.related_head	{color:#FFF; font-size:40px; text-align:center; margin-bottom:0.5em;}
+
+/* stream numbers
+-------------------------------------------------------------- */
+.related_item:before	{content:"3"; border:1px solid #ff0; display:inline-block; width:12px; height:12px; padding:10px; text-align:center; border-radius:20px; position:absolute; left:-30px; top:40%; z-index:2; line-height:14px; background:#101c28;}
+.related_item:after		{content:"5"; border:1px solid #ff0; display:inline-block; width:12px; height:12px; padding:10px; text-align:center; border-radius:20px; position:absolute; right:-30px; top:40%; z-index:2; line-height:14px; background:#101c28;}
 
 .related_item:hover		{cursor:pointer; background:rgba(0,14,32,0.95);}
 .related_item:hover	.related_title	{color:#fff;}
 .related_pivot:hover	{background:rgba(75,70,6,0.95); border:1px solid #ff0;}
 .related_item .num		{display:none;}
 .related_item .title	{width:60%; font-size:20px; line-height:22px;}
+
 .related_item span		{font-size:14px; line-height:16px; display:block;}
 .related_item span.currency			{font-size:11px;}
 .related_item span.related_aid,
