@@ -60,8 +60,8 @@
 
 #related_data_body
 
-<div class="title_wrap">
-	<div class="list_head_title">{_it.title}</div>
+<div class="related_wrap">
+	<div class="related_head">{_it.title}</div>
 	<div>
 		{_it.tab:related_item}
 	</div>
@@ -76,20 +76,22 @@
 #related_item
 
 <div id="related_{_it.idx}" class="{_it.pivot} related_item" onclick="event.stopPropagation();ctrack.url('#view=related&aid={_it.aid}');">
-	<div class="num">{_it.idx}.</div>
-	<div class="title">
-		<a class="percent">
-			<div class="related_title">{_it.title}</div>
-			<div class="related_span">
-				<span class="related_aid" onclick="event.stopPropagation();ctrack.url('#view=savi&aid={_it.aid}');">{_it.aid}</span>
-				<span class="related_org" onclick="event.stopPropagation();ctrack.url('?&reporting_ref={_it.pid}#view=main');">{_it.reporting}</span>
+	<div class="related_info">
+		<div class="num">{_it.idx}.</div>
+		<div class="title">
+			<a class="percent">
+				<div class="related_title">{_it.title}</div>
+				<div class="related_span">
+					<span class="related_aid" onclick="event.stopPropagation();ctrack.url('#view=savi&aid={_it.aid}');">{_it.aid}</span>
+					<span class="related_org" onclick="event.stopPropagation();ctrack.url('?&reporting_ref={_it.pid}#view=main');">{_it.reporting}</span>
+				</div>
+			</a>
+		</div>
+		<div class="date" title="{table_active_date_tip_text}">{_it.date_end}</div>
+		<div class="value">
+			<div class="activities_spend_wrap">
+				<div class="activities_spend" title="{activities_spend_text}">{_it.commitment}<span class="currency">{_it.currency}</span></div>
 			</div>
-		</a>
-	</div>
-	<div class="date" title="{table_active_date_tip_text}">{_it.date_end}</div>
-	<div class="value">
-		<div class="activities_spend_wrap">
-			<div class="activities_spend" title="{activities_spend_text}">{_it.commitment}<span class="currency">{_it.currency}</span></div>
 		</div>
 	</div>
 </div>
